FIX Bug in Floor Plans page

--- a/src/pages/floor-plans/floor-plans.html
+++ b/src/pages/floor-plans/floor-plans.html
@@ -8,7 +8,7 @@
 
   <div class="main-container">
 
-    <div class="header">
+    <div class="header-title">
       <h1>Current <span class="primary-yellow">Availabilities</span></h1>
     </div>
 
