Future and Vitals Page
Finished Future page. Need to complete Vitals Page and then work on
bugs.

BUG: When navigating from Side Menu, tabs disappear.

--- a/src/pages/floor-plans/floor-plans.html
+++ b/src/pages/floor-plans/floor-plans.html
@@ -1,6 +1,6 @@
 <ion-header hidden="hidden">
   <ion-navbar>
-    <ion-title>Floor Plans</ion-title>
+    <ion-title>Availabilities and Floor Plans</ion-title>
   </ion-navbar>
 </ion-header>
 
