--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -1,7 +1,7 @@
 <ion-header hidden="hidden">
   <ion-navbar>
     <ion-title>
-      Gallery
+      Gallery Images of PACWEST
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -20,42 +20,42 @@
                 <ion-slides #exterior pager="true" autoplay="5000" loop="true" speed="600" autoplayDisableOnInteraction=false (ionSlideDidChange)="slideChanged()">
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/becker-lobby3.jpg" />
+                        <div class="gallery one"></div>
                       </div>
                     </ion-slide>
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/becker-co.jpg" />
+                        <div class="gallery two"></div>
                       </div>
                     </ion-slide>
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/perkins-conf1.jpg" />
+                        <div class="gallery three"></div>
                       </div>
                     </ion-slide>
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/perkins-stairs1.jpg" />
+                        <div class="gallery four"></div>
                       </div>
                     </ion-slide>
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/schwabe1.jpg" />
+                        <div class="gallery five"></div>
                       </div>
                     </ion-slide>
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/terrace2.jpg" />
+                        <div class="gallery six"></div>
                       </div>
                     </ion-slide>
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/terrace3.jpg" />
+                        <div class="gallery seven"></div>
                       </div>
                     </ion-slide>
                     <ion-slide>
                       <div class="flex-container height-full">
-                        <img class="galleryItem" src="assets/img/gallery/terrace1.jpg" />
+                        <div class="gallery eight"></div>
                       </div>
                     </ion-slide>
                 </ion-slides>
