--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header hidden="hidden">
   <ion-navbar>
     <ion-title>
-      Home
+      PACWEST Portland
     </ion-title>
   </ion-navbar>
 </ion-header>
