--- a/src/pages/vitals/vitals.html
+++ b/src/pages/vitals/vitals.html
@@ -1,13 +1,13 @@
 <ion-header hidden="hidden">
   <ion-navbar>
     <ion-title>
-      Vitals
+      Vitals &amp; Building Features
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <div class="flex-container">
+  <div class="flex-container height-full">
     <ion-grid>
       <ion-row>
         <ion-col col-lg-6 col-md-8>
@@ -17,25 +17,60 @@
       </ion-row>
 
       <ion-row>
-        <ion-col col-lg-6 col-md-6 col-sm-12>
+        <ion-col col-lg-4>
+
+          <ion-row>
+            <ion-col col-lg-12>
+              <div class="flex-item">
+                <div class="icon-cw">
+                  <img src="assets/img/vitals/cw-270-degrees.svg" class="logo" alt="270 Degrees of view" type="image/svg+xml" />
+                </div>
+                <span class="text-center">270 Degree Panoramic views</span>
+              </div>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-lg-12>
+              <div class="icon-cw">
+                <img src="assets/img/vitals/cw-floors.svg" class="logo" alt="30 Floors" type="image/svg+xml" />
+              </div>
+              <p class="text-center">30 Floors</p>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-lg-12>
+              <div class="icon-cw">
+                <img src="assets/img/vitals/cw-patio.svg" class="logo" alt="Outdoor terraces" type="image/svg+xml" />
+              </div>
+              <p class="text-center">Outdoor terraces</p>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-lg-12>
+              <div class="icon-cw">
+                <img src="assets/img/vitals/cw-coffee.svg" class="logo" alt="Coffee" type="image/svg+xml" />
+              </div>
+              <p class="text-center">Onsite Starbucks Coffee</p>
+            </ion-col>
+          </ion-row>
+
+        </ion-col>
+
+        <ion-col col-lg-4 col-md-6 col-sm-12>
           <ul class="no-bullet">
-            <li>30 floors</li>
-            <li>Panoramic views</li>
-            <li>Outdoor terraces</li>
             <li>24-hour onsite security</li>
             <li>Structural steel frame with poured concrete decking</li>
             <li>Glass entrances/storefronts</li>
             <li>Common area showers</li>
             <li>Conference rooms</li>
-            <li>Starbucks</li>
             <li>Dry cleaners</li>
             <li>Internal stairwells</li>
-          </ul>
-        </ion-col>
-        <ion-col col-lg-6 col-md-6 col-sm-12>
-          <ul class="no-bullet">
             <li>3-level parking garage</li>
             <li>Onsite management office and engineering</li>
+          </ul>
+        </ion-col>
+        <ion-col col-lg-4 col-md-6 col-sm-12>
+          <ul class="no-bullet">
             <li>Telecom: AT&amp;T, Integra Verizon, Level3, Comcast, CenturyLink (fiber connected)</li>
             <li>Energy Star rating = 85</li>
             <li>Tri-Met (Max) stops at the both entrances to the building</li>
@@ -44,7 +79,34 @@
             <li>Free valet parking service</li>
           </ul>
         </ion-col>
+
       </ion-row>
+
+      <!-- <ion-row>
+        <ion-col col-lg-6 col-md-6 col-sm-12>
+          <ul class="no-bullet">
+            <li>24-hour onsite security</li>
+            <li>Structural steel frame with poured concrete decking</li>
+            <li>Glass entrances/storefronts</li>
+            <li>Common area showers</li>
+            <li>Conference rooms</li>
+            <li>Dry cleaners</li>
+            <li>Internal stairwells</li>
+            <li>3-level parking garage</li>
+            <li>Onsite management office and engineering</li>
+          </ul>
+        </ion-col>
+        <ion-col col-lg-6 col-md-6 col-sm-12>
+          <ul class="no-bullet">
+            <li>Telecom: AT&amp;T, Integra Verizon, Level3, Comcast, CenturyLink (fiber connected)</li>
+            <li>Energy Star rating = 85</li>
+            <li>Tri-Met (Max) stops at the both entrances to the building</li>
+            <li>Building bicycle parking</li>
+            <li>Within walking distance of numerous shops, restaurants and entertainment</li>
+            <li>Free valet parking service</li>
+          </ul>
+        </ion-col>
+      </ion-row> -->
 
     </ion-grid>
   </div>
