--- a/src/pages/vitals/vitals.html
+++ b/src/pages/vitals/vitals.html
@@ -10,26 +10,89 @@
   <div class="flex-container height-full">
     <ion-grid>
       <ion-row>
-        <ion-col col-lg-6 col-md-8>
+        <ion-col col-lg-6 col-md-8 col-sm-12>
           <h1>Pacwest <span class="primary">Vitals</span></h1>
           <p>Set to not only redesign its public facing lobby, new renovations will make PACWEST an irresistable workplace with a new fitness center, tenant lounge, bicycle parking, showers and lockers for the wellness of its tenants.</p>
         </ion-col>
       </ion-row>
 
       <ion-row>
-        <ion-col col-lg-4>
+        <ion-col col-lg-4 col-md-12 col-sm-12>
 
-          <ion-row>
-            <ion-col col-lg-12>
-              <div class="flex-item">
+          <ion-list class="vitals">
+            <ion-item>
+              <ion-avatar item-left>
+                <img src="assets/img/vitals/cw-270-degrees.svg" class="logo" alt="270 Degrees of view" type="image/svg+xml" />
+              </ion-avatar>
+              <h3>270 Degree Panoramic views</h3>
+            </ion-item>
+
+            <ion-item>
+              <ion-avatar item-left>
+                <img src="assets/img/vitals/cw-floors.svg" class="logo" alt="30 Floors" type="image/svg+xml" />
+              </ion-avatar>
+              <h3>30 Floors</h3>
+            </ion-item>
+
+            <ion-item>
+              <ion-avatar item-left>
+                <img src="assets/img/vitals/cw-patio.svg" class="logo" alt="Outdoor terraces" type="image/svg+xml" />
+              </ion-avatar>
+              <h3>Outdoor terraces</h3>
+            </ion-item>
+
+            <ion-item>
+              <ion-avatar item-left>
+                <img src="assets/img/vitals/cw-coffee.svg" class="logo" alt="Coffee" type="image/svg+xml" />
+              </ion-avatar>
+              <h3>Onsite Starbucks Coffee</h3>
+            </ion-item>
+          </ion-list>
+
+          <!-- <ion-row>
+            <ion-col col-lg-12> -->
+
+              <!-- <ion-list class="vitals">
+                <ion-item>
+                  <ion-avatar item-left>
+                    <img src="assets/img/vitals/cw-270-degrees.svg" class="logo" alt="270 Degrees of view" type="image/svg+xml" />
+                  </ion-avatar>
+                  <h3>270 Degree Panoramic views</h3>
+                </ion-item>
+
+                <ion-item>
+                  <ion-avatar item-left>
+                    <img src="assets/img/vitals/cw-floors.svg" class="logo" alt="30 Floors" type="image/svg+xml" />
+                  </ion-avatar>
+                  <h3>30 Floors</h3>
+                </ion-item>
+
+                <ion-item>
+                  <ion-avatar item-left>
+                    <img src="assets/img/vitals/cw-patio.svg" class="logo" alt="Outdoor terraces" type="image/svg+xml" />
+                  </ion-avatar>
+                  <h3>Outdoor terraces</h3>
+                </ion-item>
+
+                <ion-item>
+                  <ion-avatar item-left>
+                    <img src="assets/img/vitals/cw-coffee.svg" class="logo" alt="Coffee" type="image/svg+xml" />
+                  </ion-avatar>
+                  <h3>Onsite Starbucks Coffee</h3>
+                </ion-item>
+              </ion-list> -->
+
+              <!-- <div class="flex-item">
                 <div class="icon-cw">
                   <img src="assets/img/vitals/cw-270-degrees.svg" class="logo" alt="270 Degrees of view" type="image/svg+xml" />
                 </div>
-                <span class="text-center">270 Degree Panoramic views</span>
-              </div>
-            </ion-col>
-          </ion-row>
-          <ion-row>
+                <p class="text-center">270 Degree Panoramic views</p>
+              </div> -->
+            <!-- </ion-col>
+          </ion-row> -->
+
+
+          <!-- <ion-row>
             <ion-col col-lg-12>
               <div class="icon-cw">
                 <img src="assets/img/vitals/cw-floors.svg" class="logo" alt="30 Floors" type="image/svg+xml" />
@@ -52,12 +115,12 @@
               </div>
               <p class="text-center">Onsite Starbucks Coffee</p>
             </ion-col>
-          </ion-row>
+          </ion-row> -->
 
         </ion-col>
 
         <ion-col col-lg-4 col-md-6 col-sm-12>
-          <ul class="no-bullet">
+          <ul>
             <li>24-hour onsite security</li>
             <li>Structural steel frame with poured concrete decking</li>
             <li>Glass entrances/storefronts</li>
@@ -70,7 +133,7 @@
           </ul>
         </ion-col>
         <ion-col col-lg-4 col-md-6 col-sm-12>
-          <ul class="no-bullet">
+          <ul>
             <li>Telecom: AT&amp;T, Integra Verizon, Level3, Comcast, CenturyLink (fiber connected)</li>
             <li>Energy Star rating = 85</li>
             <li>Tri-Met (Max) stops at the both entrances to the building</li>
@@ -81,32 +144,6 @@
         </ion-col>
 
       </ion-row>
-
-      <!-- <ion-row>
-        <ion-col col-lg-6 col-md-6 col-sm-12>
-          <ul class="no-bullet">
-            <li>24-hour onsite security</li>
-            <li>Structural steel frame with poured concrete decking</li>
-            <li>Glass entrances/storefronts</li>
-            <li>Common area showers</li>
-            <li>Conference rooms</li>
-            <li>Dry cleaners</li>
-            <li>Internal stairwells</li>
-            <li>3-level parking garage</li>
-            <li>Onsite management office and engineering</li>
-          </ul>
-        </ion-col>
-        <ion-col col-lg-6 col-md-6 col-sm-12>
-          <ul class="no-bullet">
-            <li>Telecom: AT&amp;T, Integra Verizon, Level3, Comcast, CenturyLink (fiber connected)</li>
-            <li>Energy Star rating = 85</li>
-            <li>Tri-Met (Max) stops at the both entrances to the building</li>
-            <li>Building bicycle parking</li>
-            <li>Within walking distance of numerous shops, restaurants and entertainment</li>
-            <li>Free valet parking service</li>
-          </ul>
-        </ion-col>
-      </ion-row> -->
 
     </ion-grid>
   </div>
