--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <link href='https://api.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.css' rel='stylesheet' />
 
   <!-- cordova.js required for cordova apps -->
-  <script src="cordova.js"></script>
+  <!-- <script src="cordova.js"></script> -->
 
   <!-- un-comment this code to enable service worker
   <script>
@@ -42,7 +42,7 @@
   <script src="build/main.js"></script>
 
   <!-- Load Plugins JS Via CDN & BUILD-->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
 
 </body>
 </html>
