--- a/src/pages/floor-plans/floor-plans.html
+++ b/src/pages/floor-plans/floor-plans.html
@@ -56,7 +56,7 @@
               </button>
             </div>
 
-            <div class="ste-container">
+            <div class="ste-container overlayer">
               <h2>Suite 2250 | <span>4,410 sqft</span></h2>
               <button ion-button color="primary" (click)="presentModal2250()">
                 View Plan
@@ -123,7 +123,7 @@
                 View Plan
               </button>
             </div>
-            <div class="ste-container">
+            <div class="ste-container overlayer">
               <h2>Suite 790 | <span>980 sqft</span></h2>
               <button ion-button color="primary" (click)="presentModal790()">
                 View Plan
