--- a/src/pages/future/future.html
+++ b/src/pages/future/future.html
@@ -13,19 +13,6 @@
     <ion-row>
       <ion-col col-lg-12>
 
-        <!-- <div class="flex-container height-full"> -->
-          <!-- <div class="flex-container overlay">
-            <div class="flex-item align-middle">
-              <h1 class="uppercase">
-                New <span class="yellow">Plans</span>
-              </h1>
-              <h2 class="uppercase">
-                Pacwest is transformed
-              </h2>
-            </div>
-          </div> -->
-        <!-- </div> -->
-
         <ion-slides pager="true" loop="true" speed="600" autoplayDisableOnInteraction=false>
             <ion-slide>
               <div class="flex-container height-full">
@@ -35,9 +22,6 @@
                       <span class="caption">
                         View entering our new lobby.
                       </span>
-                      <!-- <br />
-                      <span class="caption">on the West Coast for the office tenant of the future.
-                      </span> -->
                     </p>
                   </div>
                 </div>
@@ -50,7 +34,7 @@
                   <div class="flex-item">
                     <p>
                       <span class="caption">
-                        View from second floor.
+                        Seating area in lobby.
                       </span>
                     </p>
                   </div>
@@ -65,7 +49,7 @@
                   <div class="flex-item">
                     <p>
                       <span class="caption">
-                        Large open space with natural lighting.
+                        Second floor elevator lobby.
                       </span>
                     </p>
                   </div>
@@ -80,7 +64,7 @@
                   <div class="flex-item">
                     <p>
                       <span class="caption">
-                        Tenant gym and workout equipment.
+                        Large second floor lobby with additional seating areas.
                       </span>
                     </p>
                   </div>
@@ -95,13 +79,58 @@
                   <div class="flex-item">
                     <p>
                       <span class="caption">
-                        Multiple workout stations.
+                        View from second floor lobby down to ground floor.
                       </span>
                     </p>
                   </div>
                 </div>
 
                 <div class="future five"></div>
+              </div>
+            </ion-slide>
+            <ion-slide>
+              <div class="flex-container height-full">
+                <div class="flex-container">
+                  <div class="flex-item">
+                    <p>
+                      <span class="caption">
+                        Ground floor lobby.
+                      </span>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="future six"></div>
+              </div>
+            </ion-slide>
+            <ion-slide>
+              <div class="flex-container height-full">
+                <div class="flex-container">
+                  <div class="flex-item">
+                    <p>
+                      <span class="caption">
+                        Large open space with natural lighting.
+                      </span>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="future seven"></div>
+              </div>
+            </ion-slide>
+            <ion-slide>
+              <div class="flex-container height-full">
+                <div class="flex-container">
+                  <div class="flex-item">
+                    <p>
+                      <span class="caption">
+                        Entrance to gym.
+                      </span>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="future eight"></div>
               </div>
             </ion-slide>
         </ion-slides>
