--- a/src/pages/future/future.html
+++ b/src/pages/future/future.html
@@ -13,7 +13,7 @@
     <ion-row>
       <ion-col col-lg-12>
 
-        <ion-slides pager="true" loop="true" speed="600" autoplayDisableOnInteraction=false>
+        <ion-slides pager="true" loop="true" speed="600" autoplayDisableOnInteraction="false" length="12">
             <ion-slide>
               <div class="flex-container height-full">
                 <div class="flex-container">
@@ -131,6 +131,70 @@
                 </div>
 
                 <div class="future eight"></div>
+              </div>
+            </ion-slide>
+
+            <ion-slide>
+              <div class="flex-container height-full">
+                <div class="flex-container">
+                  <div class="flex-item">
+                    <p>
+                      <span class="caption">
+                        View of second floor outdoor terrace.
+                      </span>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="future nine"></div>
+              </div>
+            </ion-slide>
+
+            <ion-slide>
+              <div class="flex-container height-full">
+                <div class="flex-container">
+                  <div class="flex-item">
+                    <p>
+                      <span class="caption">
+                        First floor amenities plan include bike hub, locker rooms, and Starbucks Coffee.
+                      </span>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="future ten"></div>
+              </div>
+            </ion-slide>
+
+            <ion-slide>
+              <div class="flex-container height-full">
+                <div class="flex-container">
+                  <div class="flex-item">
+                    <p>
+                      <span class="caption">
+                        Second floor amenities plan include fitness center and large lobby area.
+                      </span>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="future eleven"></div>
+              </div>
+            </ion-slide>
+
+            <ion-slide>
+              <div class="flex-container height-full">
+                <div class="flex-container">
+                  <div class="flex-item">
+                    <p>
+                      <span class="caption">
+                        Third floor amenities include tenant lounge with outdoor roof terrace.
+                      </span>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="future twelve"></div>
               </div>
             </ion-slide>
         </ion-slides>
