--- a/src/pages/modalsuites300/modalsuites300.html
+++ b/src/pages/modalsuites300/modalsuites300.html
@@ -9,22 +9,32 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <h1>3<sup>rd</sup> Floor <span class="primary">Suite 300</span><span> &mdash; ±15,491 RSF</span></h1>
+        <h1>3<sup>rd</sup> Floor <span class="primary">Suite 300</span><span> &mdash; ±10,081 RSF</span></h1>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col col-lg-8 col-md-12>
-        <img src="assets/img/modalSuites/ste-300@2x.jpg" alt="Suite 300 floor plan" />
+        <img src="assets/img/modalSuites/ste-300@2x_updated.jpg" alt="Suite 300 floor plan" />
       </ion-col>
       <ion-col col-lg-4 col-md-12 class="align-self-bottom">
-        <h4>Space <span class="primary">Features</span></h4>
-        <ul>
-          <li>Private access to terrace</li>
-          <li>Sweeping city views</li>
-          <li>Exposed ceilings</li>
-          <li>Internal stairwell</li>
-        </ul>
+        <ion-row>
+          <ion-col col-lg-10>
+            <img src="assets/img/modalSuites/ste-300-key@2x.jpg" alt="Floor 3 key" />
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-lg-12>
+            <h4>Space <span class="primary">Features</span></h4>
+            <ul>
+              <li>Private access to terrace</li>
+              <li>Sweeping city views</li>
+              <li>Exposed ceilings</li>
+              <li>Internal stairwell</li>
+              <li>Up to ±25,634 RSF with 4<sup>th</sup> Floor</li>
+            </ul>
+          </ion-col>
+        </ion-row>
       </ion-col>
     </ion-row>
   </ion-grid>
