--- a/src/pages/floor-plans/floor-plans.html
+++ b/src/pages/floor-plans/floor-plans.html
@@ -19,7 +19,7 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 2700 | <span>15,420 sqft</span></h2>
+              <h2>Suite 2700 | <span>15,420 RSF</span></h2>
               <button ion-button color="primary" item-end (click)="presentModal2700()">
                 View Plan
               </button>
@@ -31,7 +31,7 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 2600 | <span>15,420 sqft</span></h2>
+              <h2>Suite 2600 | <span>15,420 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal2600()">
                 View Plan
               </button>
@@ -43,21 +43,21 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 2220 | <span>3,886 sqft</span></h2>
+              <h2>Suite 2220 | <span>3,886 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal2220()">
                 View Plan
               </button>
             </div>
 
             <div class="ste-container">
-              <h2>Suite 2230 | <span>4,138 sqft</span></h2>
+              <h2>Suite 2230 | <span>4,138 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal2230()">
                 View Plan
               </button>
             </div>
 
             <div class="ste-container overlayer">
-              <h2>Suite 2250 | <span>4,410 sqft</span></h2>
+              <h2>Suite 2250 | <span>4,410 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal2250()">
                 View Plan
               </button>
@@ -70,7 +70,7 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 2050 | <span>11,390 sqft</span></h2>
+              <h2>Suite 2050 | <span>11,390 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal2050()">
                 View Plan
               </button>
@@ -82,13 +82,13 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 1440 | <span>4,127 sqft</span></h2>
+              <h2>Suite 1440 | <span>4,127 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal1440()">
                 View Plan
               </button>
             </div>
             <div class="ste-container">
-              <h2>Suite 1450 | <span>4,680 sqft</span></h2>
+              <h2>Suite 1450 | <span>4,680 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal1450()">
                 View Plan
               </button>
@@ -100,7 +100,7 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 1220 | <span>3,629 sqft</span></h2>
+              <h2>Suite 1220 | <span>3,629 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal1220()">
                 View Plan
               </button>
@@ -112,19 +112,19 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 730 | <span>2,038 sqft</span></h2>
+              <h2>Suite 730 | <span>2,038 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal730()">
                 View Plan
               </button>
             </div>
             <div class="ste-container">
-              <h2>Suite 740 | <span>4,846 sqft</span></h2>
+              <h2>Suite 740 | <span>4,846 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal740()">
                 View Plan
               </button>
             </div>
             <div class="ste-container overlayer">
-              <h2>Suite 790 | <span>980 sqft</span></h2>
+              <h2>Suite 790 | <span>980 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal790()">
                 View Plan
               </button>
@@ -136,7 +136,7 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 400 | <span>15,491 sqft</span></h2>
+              <h2>Suite 400 | <span>15,491 RSF</span></h2>
               <button ion-button color="primary" item-end (click)="presentModal400()">
                 View Plan
               </button>
@@ -148,7 +148,7 @@
         <ion-row align-items-end>
           <ion-col col>
             <div class="ste-container">
-              <h2>Suite 300 | <span>15,491 sqft</span></h2>
+              <h2>Suite 300 | <span>10,081 RSF</span></h2>
               <button ion-button color="primary" (click)="presentModal300()">
                 View Plan
               </button>
